<resources>
    <string name="app_name">AppCocinillas</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="pass">Contraseña</string>
    <string name="email">Email</string>
    <string name="registro">Registro</string>
    <string name="imagen_desc">Receta</string>
    <string name="login">Login</string>
    <string name="no_hay_meals_en_este_momento">No hay recetas en este momento</string>
    <string name="confirmar">Confirmar contraseña</string>
    <string name="instrucciones">Instrucciones</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="receta">Receta</string>
    <string name="marcar">Botón de selección</string>
    <string name="marisco">Marisco</string>
    <string name="pollo">Pollo</string>
    <string name="pasta">Pasta</string>
    <string name="vegetariana">Vegetariana</string>
    <string name="varias">Varias</string>
    <string name="favoritos">Favoritos</string>
</resources>