<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/seafood"
        android:title="@string/marisco"
        app:showAsAction="never" />

    <item
        android:id="@+id/chicken"
        android:title="@string/pollo"
        app:showAsAction="never" />

    <item
        android:id="@+id/pasta"
        android:title="@string/pasta"
        app:showAsAction="never" />

    <item
        android:id="@+id/vegetarian"
        android:title="@string/vegetariana"
        app:showAsAction="never" />

    <item
        android:id="@+id/miscellaneous"
        android:title="@string/varias"
        app:showAsAction="never" />

    <item
        android:id="@+id/favoritos"
        android:title="@string/favoritos"
        app:showAsAction="never" />

</menu>