<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginVertical="16dp"
        android:text="@string/registro"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="12dp"
        android:inputType="textEmailAddress"
        android:layout_marginHorizontal="24dp"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"
        android:layout_marginHorizontal="24dp"/>

    <EditText
        android:id="@+id/etConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmar"
        android:layout_marginTop="12dp"
        android:inputType="textPassword"
        android:layout_marginHorizontal="24dp"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="24dp"/>

</LinearLayout>
